Bug 281877 - Redo same result as discard changes
Summary: Redo same result as discard changes
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: ImageEditor-Undo (other bugs)
Version First Reported In: 2.1.0
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-12 13:53 UTC by Rinus Bakker
Modified: 2017-08-08 08:32 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rinus Bakker 2011-09-12 13:53:46 UTC
Version:           2.1.0 (using KDE 4.7.0) 
OS:                Linux

Whichever point of edit step redo I select, it reverts step by step with the ultimate result being same as discard changes.

Reproducible: Always

Steps to Reproduce:
as descibed

Actual Results:  
as described

Expected Results:  
As digikam editor is aware of which step at a certain point can be reverted, it would be nice if this was reflected in the menu, by graying out steps that are not available or group all steps that will be involved in a reversion to the selected point and do this steps at once, so not doing something you did not expect, no matter how logical explainable digikams action is, it is different from choosed.
Comment 1 Marcel Wiesweg 2011-09-12 19:23:54 UTC
I understand that you pick an item from the submenu (downwards arrow of the redo toolbar button) but as a result all available steps are redone?
Undo (backwards) or redo (undo undone step)?
Comment 2 caulier.gilles 2011-11-24 11:40:58 UTC
Rinnus,

Can you reproduce the problem with current implementation from Git/Master (next 2.4.0) ?

Gilles Caulier
Comment 3 Farhan 2011-12-06 16:22:58 UTC
On DigiKam 2.3.0, after applying the effect, the Redo button is disabled.

I think the user may have meant Undo.

After applying, if I Undo, I get back the image prior to applying the full effect i.e if i choose blur, try out blur at different settings and apply, I get the unblurred image and not one of the "set blur where I hadn't clicked OK yet".

In Photoshop, I can Undo every small change like a blur but we use the mouse there and it has a different interface.
Comment 4 caulier.gilles 2011-12-18 17:25:07 UTC
Rinus,

This file still valid using digiKam 2.4 ?

Gilles Caulier
Comment 5 Marcel Wiesweg 2012-02-21 18:48:44 UTC
Git commit fec6928e7e1b2300ae9c667503843162842e44c1 by Marcel Wiesweg.
Committed on 21/02/2012 at 19:47.
Pushed by mwiesweg into branch 'master'.

Fix order of redo actions. Functionality was correct, but labelling was reversed.

M  +6    -2    utilities/imageeditor/canvas/undomanager.cpp

http://commits.kde.org/digikam/fec6928e7e1b2300ae9c667503843162842e44c1
Comment 6 Marcel Wiesweg 2012-02-21 18:49:47 UTC
Undo/redo works fine for me. I have fixed a little problem with a reverse labelling of redo steps. No further input here from original reporter, so closing.
Comment 7 Francesco Riosa 2012-02-21 20:42:40 UTC
Git commit 19d4c9201ccd175ed67cee0724413e087fb4b0e2 by Francesco Riosa.
Committed on 21/02/2012 at 21:40.
Pushed by riosa into branch 'master'.

[lcms2] tag buffer need initialization

M  +4    -1    libs/dklcms/digikam-lcms.cpp

http://commits.kde.org/digikam/19d4c9201ccd175ed67cee0724413e087fb4b0e2
Comment 8 Francesco Riosa 2012-02-21 23:27:37 UTC
Git commit 326c8803e3740dfbd421a537b6226c2a25bd4426 by Francesco Riosa.
Committed on 22/02/2012 at 00:22.
Pushed by riosa into branch 'master'.

[lcms2] fixed a cast bug in cmsFloat2XYZEncoded()

We are now at feature parity with lcms1.
There are differences between the two implementations, they are
quantifiable even in 8bit images.

lcms2 should be more precise (and faster) than lcms1

M  +1    -7    libs/dklcms/digikam-lcms.cpp
M  +0    -3    libs/dklcms/digikam-lcms.h

http://commits.kde.org/digikam/326c8803e3740dfbd421a537b6226c2a25bd4426
Comment 9 Francesco Riosa 2012-02-21 23:36:11 UTC
latest two comment obviously on the wrong bug :-/