[lcms2] fixed a cast bug in cmsFloat2XYZEncoded()

We are now at feature parity with lcms1.
There are differences between the two implementations, they are
quantifiable even in 8bit images.

lcms2 should be more precise (and faster) than lcms1

BUG: 281877